Dark and Light theme added

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,21 @@
   text-align: center;
 }
 
+.dark-theme {
+  --main-heading: #5f99be;
+  --para-clr: #fff;
+  --btn-bg-color: #5f99be;
+  --btn-text-clr: #fff;
+  --bg-color: #111b20;
+}
+.light-theme {
+  --main-heading: #5f99be;
+  --para-clr: #333;
+  --btn-bg-color: #111b20;
+  --btn-text-clr: #fff;
+  --bg-color: #fff;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
